Proposed_FT_FEDTL_Model_Source_code.ipynb

--- a/Proposed_FT_FEDTL_Model_Source_code.ipynb
+++ b/Proposed_FT_FEDTL_Model_Source_code.ipynb
@@ -45,7 +45,7 @@
         "#Data directory path for display or show the image from the directory\n",
         "\n",
         "data_dir = ('image directiory or path') # traininvg or validation image path\n",
-        "categories = ['NT', 'SBT', 'SMT', 'TBT', 'TMT', 'SBSMT']\n # Put your class names",
+        "categories = ['NT', 'SBT', 'SMT', 'TBT', 'TMT', 'SBSMT']# Put your class names\n ",
         "n_classes = len(categories)\n",
         "for i in categories:\n",
         "    path = os.path.join(data_dir, i)\n",
