Proposed_FT_FEDTL_Model_Source_code.ipynb

--- a/Proposed_FT_FEDTL_Model_Source_code.ipynb
+++ b/Proposed_FT_FEDTL_Model_Source_code.ipynb
@@ -22,6 +22,7 @@
       },
       "outputs": [],
       "source": [
+        "# import all necessary libraries\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras.models import Sequential\n",
