Proposed_FT_FEDTL_Model_Source_code.ipynb

--- a/Proposed_FT_FEDTL_Model_Source_code.ipynb
+++ b/Proposed_FT_FEDTL_Model_Source_code.ipynb
@@ -235,7 +235,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Set up fine-tuned hyperparameters\n",
+        "# Set up fine-tuned hyperparameters and start the training of the model\n",
         "\n",
         "model_es = EarlyStopping(monitor = 'loss', min_delta = 1e-11, patience = 40, verbose = 1)\n",
         "model_rlr = ReduceLROnPlateau(monitor = 'val_loss', factor = 0.2, patience = 40, verbose = 1)\n",
